Fix: Long context menus in music library used to overflow from the bottom on mobile Fix: Used an integer value for context menu dividers to avoid blurriness

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -2387,6 +2387,15 @@ div[data-role=controlgroup] a.ui-btn-active {
     background-color: var(--activeColor) !important;
 }
 
+.actionsheetDivider{
+    height: 2px;
+    background: rgb(255, 255, 255, 0.05);
+}
+
+.actionsheet-xlargeFont{
+    line-height: normal;
+}
+
 .actionSheetContent {
     padding: .4em !important;
 }
